[tool.poetry]
name = "2-10-1"
version = "0.1.0"
description = ""
authors = ["Vutaliy.Avdoshkin <wioswa@gmail.com>"]
readme = "README.md"
packages = [{include = "2_10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
